--- a/test/common/_scss/test.scss
+++ b/test/common/_scss/test.scss
@@ -2,11 +2,11 @@
 /*!test*/
 .test {
 	margin-top: 10px;
-	.test {//test
-		margin-top: 20px;/* test */
+	.test {
+		margin-top: 20px;
 		.hoge{
 			display: flex;
-			margin-top: 30px;
+			margin-top: 50px;
 		}
 	}
 	.testteetetet {
